--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,9 +4,11 @@
   --nav-width: 68px;
 
   /*===== Colors =====*/
-  --first-color: #4723D9;
-  --first-color-light: #AFA5D9;
-  --white-color: #F7F6FB;
+  --first-color: #006d77;
+  --first-color-light: #edf6f9;
+  --second-color: #ffa700;
+  --gray-color: #fafafa;
+
 
   /*===== Font and typography =====*/
 
@@ -46,7 +48,7 @@ a {
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem;
-  background-color: var(--white-color);
+  background-color: var(--gray-color);
   z-index: var(--z-fixed);
   transition: .5s;
 }
@@ -106,11 +108,11 @@ a {
 
 .nav__logo-icon {
   font-size: 1.25rem;
-  color: var(--white-color);
+  color: var(--second-color);
 }
 
 .nav__logo-name {
-  color: var(--white-color);
+  color: var(--second-color);
   font-weight: 700;
 }
 
@@ -122,7 +124,7 @@ a {
 }
 
 .nav__link:hover {
-  color: var(--white-color);
+  color: var(--second-color);
 }
 
 .nav__icon {
@@ -141,7 +143,7 @@ a {
 
 /*Active links*/
 .active {
-  color: var(--white-color);
+  color: var(--second-color);
 }
 
 .active::before {
@@ -150,7 +152,7 @@ a {
   left: 0;
   width: 2px;
   height: 32px;
-  background-color: var(--white-color);
+  background-color: var(--second-color);
 }
 
 /* ===== MEDIA QUERIES=====*/
@@ -188,4 +190,29 @@ a {
   .body-pd {
     padding-left: calc(var(--nav-width) + 188px);
   }
+}
+
+.card-title{
+    background-color: var(--second-color);
+
+}
+
+.text-header-1{
+    font-size: 24px !important;
+    margin-top: 6px !important;
+    font-weight: bold !important;
+    padding: 5px;
+    color: #003566;
+}
+#txt{
+    font-size: 20px !important;
+    font-weight: 700;
+    color: #003566;
+
+}
+
+#txt-sp{
+    font-size: 17px !important;
+    font-weight: 700;
+    color: #003566;
 }
