--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,4 +242,27 @@ a {
     font-weight: 700;
 }
 
+.form-check-label{
+    font-size: 17px !important;
+    font-weight: 600;
+    color: #003566;
+}
 
+#desc_prob{
+    font-size: 16px !important;
+    font-weight: 600;
+}
+
+input[type="text"],input[type="date"],input[type="time"]{
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.btn-success{
+    width: 200px !important;
+    font-size: 18px !important;
+    font-weight: 600;
+}
+.save-icon{
+    font-size: 20px !important;
+}
