--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,6 +258,12 @@ input[type="text"],input[type="date"],input[type="time"]{
     font-weight: 600;
 }
 
+textarea{
+    font-size: 17px;
+    font-weight: 600;
+    resize: none;
+}
+
 .btn-success{
     width: 200px !important;
     font-size: 18px !important;
@@ -265,4 +271,36 @@ input[type="text"],input[type="date"],input[type="time"]{
 }
 .save-icon{
     font-size: 20px !important;
+}
+
+.headertxt{
+    color: #0b2f9f;
+    background-color: #98ded9;
+}
+
+.headertxt h5{
+    font-weight: bold;
+}
+
+.headertxtform{
+    color: #071952;
+    background-color: #ebf4f6;
+
+}
+
+.headertxtform p{
+    font-weight: bold;
+    font-size: 20px !important;
+    margin-top: 3px;
+}
+
+#form_caseandactive{
+    display: none;
+    margin-top: 10px !important;
+}
+
+#label-form{
+    font-size: 18px !important;
+    font-weight: 600;
+    color: #050c9c;
 }
