--- a/public/css/style.css
+++ b/public/css/style.css
@@ -480,3 +480,17 @@ textarea{
     padding: 10px;
     border-radius: 5px;
 }
+
+.headerReports{
+    padding-top: 10px;
+    text-align: center;
+    font-weight: 600;
+    color: #0000CD;
+}
+
+#reportTable{
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 14pt;
+    font-weight: bold;
+}
